<resources>
    <string name="sign_in_error_msg">Could not sign in</string>
    <string name="sign_in">Sign in</string>
    <string name="email_hint">e-mail</string>
    <string name="password_hint">password</string>
    <string name="or_header">or</string>
    <string name="sign_in_with_google_text">Sign in with Google</string>
    <string name="sign_up_header">Don\'t have an account?</string>
    <string name="sign_up_link"><u>Sign up.</u></string>
    <string name="sign_up">Sign up</string>
    <string name="confirm_password_hint">confirm password</string>
    <string name="email_empty_error_message">E-mail cannot be empty</string>
    <string name="incorrect_email_error_message">Invalid e-mail</string>
    <string name="password_empty_error_message">Password cannot be empty</string>
    <string name="password_length_error_message">Password must be at least 6 characters long</string>
    <string name="different_passwords_error_message">Passwords don\'t match</string>
    <string name="could_not_create_account_error_message">Could not create account</string>
    <string name="sign_up_success_message">Signed up successfully</string>
    <string name="user_already_exists_error_message">User with this e-mail already exists</string>
    <string name="invalid_credentials_error_message">Wrong password</string>
    <string name="sign_in_failed_error_message">Sign in failed</string>
    <string name="empty_credentails_error_message">Credentials cannot be empty</string>
    <string name="no_user_error_message">User doesn\'t exist</string>
</resources>