<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sign_up_fragment_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/grid_24"
    tools:background="@color/background_color"
    tools:context="com.dawidk.registration.SignUpFragment">

    <TextView
        android:id="@+id/sign_up_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/grid_24"
        android:gravity="center_horizontal"
        android:paddingTop="@dimen/grid_8"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="@dimen/list_item_name_font_size_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/email_error_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_text_view" />

    <EditText
        android:id="@+id/signup_email_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/grid_8"
        android:layout_marginBottom="@dimen/grid_8"
        android:autofillHints="emailAddress"
        android:background="@color/white"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:padding="@dimen/grid_8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_error_text_view" />

    <TextView
        android:id="@+id/password_error_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/grid_8"
        android:textColor="@color/red"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_email_edit_text" />

    <EditText
        android:id="@+id/signup_password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/grid_8"
        android:layout_marginBottom="@dimen/grid_8"
        android:autofillHints="password"
        android:background="@color/white"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:padding="@dimen/grid_8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_error_text_view" />

    <EditText
        android:id="@+id/confirm_password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/grid_8"
        android:layout_marginBottom="@dimen/grid_8"
        android:autofillHints="password"
        android:background="@color/white"
        android:hint="@string/confirm_password_hint"
        android:inputType="textPassword"
        android:padding="@dimen/grid_8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_password_edit_text" />

    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/grid_4"
        android:layout_marginBottom="@dimen/grid_4"
        android:text="@string/sign_up"
        android:textAllCaps="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirm_password_edit_text" />

</androidx.constraintlayout.widget.ConstraintLayout>